# CSE-2024-Fall-OS

./: CPU Scheduler presentation.pptx  ECVirtualMemory.h  README.md  addrspace.c
Adrian_Nick_John_joe/: hello.txt
Alex_Kyle_Ryan/: group.txt
Alex_Kyle_Ryan_Trevor/: Group_Project_CPU_Scheduler_2024.pptx  Main.c  Scheduler.h  group.txt  main.c  makefile  process.h  scheduler.c  scheduler.h  scheduler_app
Bryan_Christian_Maya_John/: README.md  RandomReplacement.py  belady_op.py  fifo 2.py  lru_implement.py
Dominic_Rachel_Harman_Raen/: CPU Scheduler presentation.pptx
Jan_Jonathan_Joseph_Nicholas/: CSE 4300 - .pptx  cse4300project.py  scheduling_results.txt
Joseph/: CSE 4300 Presentation.pptx  README.md  cache.py  output.txt
Kevin_Sebastian_Josiah_Freddy/: ECVirtualMemory.cpp  ECVirtualMemoryFIFO.cpp  ECVirtualMemoryMRU.cpp  ECVirtualMemoryMRU.h  ECVirtualMemoryRAND.cpp  ECVirtualMemoryRANDTest.cpp  ECVirtualMemoryTest.cpp  ECVirtualMemoryTestMRU.cpp  GroupProject.md
Kexin_Ricky_Dawei_John/: Accelerating Trasformers via Multi-tiered Memory.pptx  GroupProject.md
Mia_Brian_Liya_Cecil/: 4300 Group Project.pptx  FIFO.c  FIFO.h  README.md  SJF.c  calculating.c  main.c  thread.h
NovrusShehaj_OlehStasyuk_GroupProject/: CMakeLists.txt  README.md
NovrusShehaj_OlehStasyuk_GroupProject/docs/: api_reference.md  design_doc.md
NovrusShehaj_OlehStasyuk_GroupProject/include/: defragmenter.h  garbage_collector.h  memory_allocator.h  root_pointers.h
NovrusShehaj_OlehStasyuk_GroupProject/src/: defragmenter.c  garbage_collector.c  main.c  memory_allocator.c  root_pointers.c
NovrusShehaj_OlehStasyuk_GroupProject/tests/: test_defragmenter.c  test_garbage_collector.c  test_memory_allocator.c
SaiKiran_Dhruvik_Harsh_Kaustubh/: OS_Project_Report_Presentation.pptx  README.md  os project report.docx
SaiKiran_Dhruvik_Harsh_Kaustubh/FileSys_GUI/: Makefile  file_operations.cpp  file_operations.h  imgui.ini  main.cpp  (+1 more)
jake_wilson_xin_peiqi/: Project.md  Structure
owen_kieran_luke_jake/: Makefile  README.md  cpu.cpp  cpu.h  jobs.txt  jobs_AgingStressTest.txt  jobs_AgingTest.txt  jobs_EqualPriority.txt  jobs_HighPriorityBurst.txt  jobs_HighPriorityPreemption.txt  jobs_LongRunLowPriority.txt  jobs_Mixed.txt  jobs_ThreadOneStarved.txt  main.cpp  scheduler  scheduler.cpp  scheduler.h  thread.cpp  thread.h
process_result/: result
(+63 files in other folders)
